--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "./dist/index.js",
   "scripts": {
     "clear": "rm -rf ./dist",
-    "start:dev": "ts-node-dev --respawn ./index.ts",
-    "start:prod": "npm run clear && tsc && node ./dist/index.js",
+    "build": "tsc",
+    "start:dev": "ts-node-dev --respawn ./src/index.ts",
+    "start:prod": "npm run clear && npm run build && node ./dist/index.js",
     "start:multi": "echo Not implemented",
-    "lint:fix": "eslint --fix",
-    "format:fix": "prettier --write"
+    "lint": "eslint --ext ts --report-unused-disable-directives --max-warnings 0 && prettier \"./src/**/*.ts\" --check",
+    "lint:fix": "eslint --ext ts --report-unused-disable-directives --max-warnings 0 --fix",
+    "format:fix": "prettier \"./src/**/*.ts\" --write",
+    "test": "jest --silent",
+    "test:verbose": "jest"
   },
   "keywords": [
     "crud",
@@ -18,8 +22,20 @@
   "author": "ChocolateNao",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.17",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
