--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start:dev": "ts-node-dev --respawn ./src/index.ts",
     "start:prod": "npm run clear && npm run build && node ./dist/index.js",
     "start:multi": "echo Not implemented",
-    "lint": "eslint --ext ts --report-unused-disable-directives --max-warnings 0 && prettier \"./src/**/*.ts\" --check",
-    "lint:fix": "eslint --ext ts --report-unused-disable-directives --max-warnings 0 --fix",
+    "lint": "eslint ./src --ext ts --report-unused-disable-directives --max-warnings 0 && prettier \"./src/**/*.ts\" --check",
+    "lint:fix": "eslint ./src --ext .ts --report-unused-disable-directives --max-warnings 0 --fix",
     "format:fix": "prettier \"./src/**/*.ts\" --write",
     "test": "jest --silent",
     "test:verbose": "jest"
@@ -37,6 +37,7 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
     "webpack": "^5.90.1",
