--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
     "import/first": "error",
     "import/newline-after-import": "error",
     "import/no-duplicates": "error",
-    "typescript-eslint/strict-boolean-expressions": "off"
+    "@typescript-eslint/strict-boolean-expressions": "off"
   },
   "overrides": [
     {
